# bigint-lib-shiboken

./: CMakeLists.txt  main.py
bigintbinding/: CMakeLists.txt
bigintbinding/bigint/: CMakeLists.txt  global.h  typesystem_bigint.xml
lib/: CMakeLists.txt  Makefile  bigint.cpp  bigint.h  bigint.pro  libbigint.so.1.0  libbigint.so.1.0.0
